Updated with del map

--- a/Python Primer.ipynb
+++ b/Python Primer.ipynb
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "edc6830c",
+   "id": "c6c03a87",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e7536906",
+   "id": "69ee9b72",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "30a78451",
+   "id": "c8d8d965",
    "metadata": {},
    "outputs": [
     {
@@ -384,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "828a13ec",
+   "execution_count": 9,
+   "id": "8c0a63a3",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,8 @@
      "output_type": "stream",
      "text": [
       "{'Ali': 'Cricket', 'Hamza': 'Football', 'Shaheer': 'Tennis', 'Aashir': 'Hockey'}\n",
-      "{'Ali': 'Mobile Game', 'Hamza': 'Football', 'Shaheer': 'Tennis', 'Aashir': 'Hockey'}\n"
+      "{'Ali': 'Mobile Game', 'Hamza': 'Football', 'Shaheer': 'Tennis', 'Aashir': 'Hockey'}\n",
+      "{'Hamza': 'Football', 'Shaheer': 'Tennis', 'Aashir': 'Hockey'}\n"
      ]
     }
    ],
@@ -408,13 +409,16 @@
     "print(sportsManList)\n",
     "# Update Value on Specific Key\n",
     "sportsManList['Ali'] = 'Mobile Game'\n",
+    "print(sportsManList)\n",
+    "# Delete Value on Specific Key\n",
+    "del sportsManList['Ali']\n",
     "print(sportsManList)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57dad3d4",
+   "id": "82fdcbd9",
    "metadata": {},
    "outputs": [],
    "source": []
